--- a/src/main/resources/application-ci.yml
+++ b/src/main/resources/application-ci.yml
@@ -12,3 +12,41 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+
+
+  security:
+    oauth2:
+      client:
+        provider:
+          kakao:
+            authorization-uri: authorization://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+        registration:
+          google:
+            client-id: client-id
+            client-secret: client-secret
+            scope:
+              - email
+              - profile
+
+          kakao:
+            client-name: Kakao
+            client-id: client-id
+            client-secret: client-secret
+            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+            scope:
+              - profile_nickname
+              - profile_image
+
+custom:
+  jwt:
+    secrets:
+      origin-key: ci-origin-secret-key
+      app-key: ci-app-secret-key
+    validation:
+      access: 1800000      # 30분
+      refresh: 1209600000  # 14일
