--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,6 +39,9 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build -Dspring.profiles.active=ci
 
+    - name: Run Tests
+      run: ./gradlew test -Dspring.profiles.active=ci
+
     - name: Upload Gradle build reports
       if: failure()
       uses: actions/upload-artifact@v4
