--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,8 +39,8 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build -Dspring.profiles.active=ci
 
-    - name: Run Tests
-      run: ./gradlew test -Dspring.profiles.active=ci
+    - name: Build without test
+      run: ./gradlew build -x test
 
     - name: Upload Gradle build reports
       if: failure()
@@ -55,6 +55,8 @@ jobs:
       with:
         name: test-report
         path: build/reports/tests/test
+
+        
         
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
