--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,9 +36,17 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build -Dspring.profiles.active=ci
-      
+    - name: Build without test
+      run: ./gradlew build -x test -Dspring.profiles.active=ci
+
+    - name: Upload Gradle build reports
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: gradle-problems-report
+        path: build/reports/problems
+
+        
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
